project/force-app/main/default/objects/Submission_Report_Line__c/Submission_Report_Line__c.object-meta.xml
<CustomObject>
    <label>Submission Report Line</label>
    <nameField>
        <displayFormat>SRL-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Submission Report Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>