project/force-app/main/default/objects/Submission_Report_Line__c/fields/Air_Conditioning_Fee_USD_m2_Month__c.field-meta.xml
<CustomField>
    <fullName>Air_Conditioning_Fee_USD_m2_Month__c</fullName>
    <description>Chỉ hiển thị trong trường hợp Opportunity là Thuê Mới - Gian Hàng và có Đơn Giá Phí Điều Hoà
- Luôn bằng Đơn Giá Phí Điều Hòa trên Opportunity</description>
    <label>Air Conditioning Fee (USD/m2/Month)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>