project/force-app/main/default/objects/Submission_Report_Line__c/fields/Budget_Capex_Support_Area_m2__c.field-meta.xml
<CustomField>
    <fullName>Budget_Capex_Support_Area_m2__c</fullName>
    <description>Lấy thông tin bên RO</description>
    <formula>0</formula>
    <label>Budget Capex Support Area (m2)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>