project/force-app/main/default/objects/Submission_Report_Line__c/fields/Budget_Rent_Price_USD_m2_Month__c.field-meta.xml
<CustomField>
    <fullName>Budget_Rent_Price_USD_m2_Month__c</fullName>
    <description>Read Only
 = Opportunity Product.Product.Giá NS
- Lấy thông tin bên RO</description>
    <formula>0</formula>
    <label>Budget Rent Price (USD/m2/Month)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>