project/force-app/main/default/objects/Submission_Report_Line__c/fields/Budget_Service_Fee_VND_m2_Month__c.field-meta.xml
<CustomField>
    <fullName>Budget_Service_Fee_VND_m2_Month__c</fullName>
    <description>Hiển thị trong trường hợp Opportunity là Thuê mới - Shophouse, Thuê mới - Gian Hàng
Công thức bằng tiền USD * Exchange Rate (Trong đó Exchange Rate lấy dữ liệu từ hàm CURRENCYRATE)</description>
    <formula>0</formula>
    <label>Budget Service Fee (VND/m2/Month)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>