project/force-app/main/default/objects/Submission_Report_Line__c/fields/Capex_Budget_VND__c.field-meta.xml
<CustomField>
    <fullName>Capex_Budget_VND__c</fullName>
    <description>Lấy thông tin bên RO</description>
    <formula>0</formula>
    <label>Capex Budget (VND)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>