project/force-app/main/default/objects/Submission_Report_Line__c/fields/Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate__c</fullName>
    <description>Read Only
Lấy thông tin từ Opportunity 
+ Nếu Currency trên Opportunity là VND thì sẽ bằng Exchange Rate trên Opportunity
+ Nếu Currency trên Opportunity là USD thì sẽ bằng 1/Exchange Rate trên Opportunity</description>
    <label>Exchange Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>