project/force-app/main/default/objects/Submission_Report_Line__c/fields/Fixed_Price__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Price__c</fullName>
    <description>Read Only
Lấy thông tin từ Opportunity</description>
    <label>Fixed Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>