project/force-app/main/default/objects/Submission_Report_Line__c/fields/Increase_by_Year__c.field-meta.xml
<CustomField>
    <fullName>Increase_by_Year__c</fullName>
    <label>% Increase by Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>