project/force-app/main/default/objects/Submission_Report_Line__c/fields/Min_Range__c.field-meta.xml
<CustomField>
    <fullName>Min_Range__c</fullName>
    <description>Read Only
Lấy thông tin từ Opportunity</description>
    <label>Min Range</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>