project/force-app/main/default/objects/Submission_Report_Line__c/fields/Number_Of_Support_Months__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Support_Months__c</fullName>
    <description>Lấy thông tin bên RO</description>
    <formula>0</formula>
    <label>Number Of Support Months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>