project/force-app/main/default/objects/Submission_Report_Line__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity_Submission_Report_Line</relationshipLabel>
    <relationshipName>Opportunity_Submission_Report_Line</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>