project/force-app/main/default/objects/Submission_Report_Line__c/fields/Opportunity_Submission_Report__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Submission_Report__c</fullName>
    <label>Opportunity Submission Report</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity_Submission_Report_Submission</relationshipLabel>
    <relationshipName>Opportunity_Submission_Report_Submission</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>