project/force-app/main/default/objects/Submission_Report_Line__c/fields/Outdoor_Price_Difference_USD_m2_Month__c.field-meta.xml
<CustomField>
    <fullName>Outdoor_Price_Difference_USD_m2_Month__c</fullName>
    <description>Trừ Outdoor Price (USD/m2/Month) và Budget Renting Outdoor (USD/m2/Month)</description>
    <formula>0</formula>
    <label>Outdoor Price Difference (USD/m2/Month)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>