project/force-app/main/default/objects/Submission_Report_Line__c/fields/Outdoor_Price_USD_m2_Month__c.field-meta.xml
<CustomField>
    <fullName>Outdoor_Price_USD_m2_Month__c</fullName>
    <description>Chỉ hiển thị trong trường hợp Opportunity là Thuê Mới - Shophouse và có Đơn Giá Thuê Ngoài Trời
+ Luôn bằng Đơn Giá Thuê Ngoài Trời từ Opportunity</description>
    <label>Outdoor Price (USD/m2/Month)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>