project/force-app/main/default/objects/Submission_Report_Line__c/fields/Overtime_Fee_USD_m2_Month__c.field-meta.xml
<CustomField>
    <fullName>Overtime_Fee_USD_m2_Month__c</fullName>
    <description>Chỉ hiển thị trong trường hợp Opportunity là Thuê Mới - Gian Hàng và có Đơn Giá Phí Ngoài Giờ
- Luôn bằng Đơn Giá Ngoài Giờ</description>
    <label>Overtime Fee (USD/m2/Month)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>