project/force-app/main/default/objects/Submission_Report_Line__c/fields/Price_Duration__c.field-meta.xml
<CustomField>
    <fullName>Price_Duration__c</fullName>
    <description>Nếu End Date không bằng Start Date + 365 - 1; (End Date - Start Date/365)*12</description>
    <label>Price Duration</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>