project/force-app/main/default/objects/Submission_Report_Line__c/fields/Price_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Price_Start_Date__c</fullName>
    <description>- Read Only 
- Yêu cầu hiển thị theo cú pháp DD/MM/YYYY</description>
    <label>Price Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>