project/force-app/main/default/objects/Submission_Report_Line__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>Read Only Dạng URL</description>
    <formula>&quot;&quot;</formula>
    <label>RO Name</label>
    <type>Text</type>
</CustomField>