project/force-app/main/default/objects/Submission_Report_Line__c/fields/Rental_Difference_USD_m2_Month__c.field-meta.xml
<CustomField>
    <fullName>Rental_Difference_USD_m2_Month__c</fullName>
    <description>Trừ Rent Price (USD/m2/Month) và Unit Price (USD/m2/Month)</description>
    <formula>0</formula>
    <label>Rental Difference (USD/m2/Month)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>