project/force-app/main/default/objects/Submission_Report_Line__c/fields/Rental_Difference_VND_m2_Month__c.field-meta.xml
<CustomField>
    <fullName>Rental_Difference_VND_m2_Month__c</fullName>
    <description>Tương tự chênh lệch đơn giá thuê nhưng là tiền VND</description>
    <formula>0</formula>
    <label>Rental Difference (VND/m2/Month)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>