project/force-app/main/default/objects/Submission_Report_Line__c/fields/Revenue_Shared__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Shared__c</fullName>
    <description>Read Only
Lấy thông tin từ Opportunity</description>
    <label>% Revenue Shared</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>