project/force-app/main/default/objects/Submission_Report_Line__c/fields/Sales_Capex_Support_Area_m2__c.field-meta.xml
<CustomField>
    <fullName>Sales_Capex_Support_Area_m2__c</fullName>
    <label>Sales Capex Support Area (m2)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>