project/force-app/main/default/objects/Submission_Report_Line__c/fields/Sales_Number_Of_Support_Months__c.field-meta.xml
<CustomField>
    <fullName>Sales_Number_Of_Support_Months__c</fullName>
    <label>Sales Number Of Support Months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>