project/force-app/main/default/objects/Submission_Report_Line__c/fields/Sales_Support_Norm_VND_m2__c.field-meta.xml
<CustomField>
    <fullName>Sales_Support_Norm_VND_m2__c</fullName>
    <label>Sales Support Norm (VND/m2)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>