project/force-app/main/default/objects/Submission_Report_Line__c/fields/Sales_Support_Voucher_Amount_VND_Mont__c.field-meta.xml
<CustomField>
    <fullName>Sales_Support_Voucher_Amount_VND_Mont__c</fullName>
    <label>Sales Support Voucher Amount (VND/Month)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>