project/force-app/main/default/objects/Submission_Report_Line__c/fields/Service_Fee_Difference_USD_m2_Month__c.field-meta.xml
<CustomField>
    <fullName>Service_Fee_Difference_USD_m2_Month__c</fullName>
    <description>Trừ Service Fee (USD/m2/Month) và Budget Service Fee (USD/m2/Month)</description>
    <formula>0</formula>
    <label>Service Fee Difference (USD/m2/Month)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>