project/force-app/main/default/objects/Submission_Report_Line__c/fields/Service_Fee_USD_m2_Month__c.field-meta.xml
<CustomField>
    <fullName>Service_Fee_USD_m2_Month__c</fullName>
    <description>Hiển thị trong trường hợp Opportunity là Thuê mới - Shophouse, Thuê mới - Gian Hàng
- Luôn bằng Đơn Giá Phí Dịch Vụ từ Opportunity</description>
    <label>Service Fee (USD/m2/Month)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>