project/force-app/main/default/objects/Submission_Report_Line__c/fields/Shared_Revenue_By_Char__c.field-meta.xml
<CustomField>
    <fullName>Shared_Revenue_By_Char__c</fullName>
    <label>% Shared Revenue (By Character)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>