project/force-app/main/default/objects/Submission_Report_Line__c/fields/Sort_Submission_Line__c.field-meta.xml
<CustomField>
    <fullName>Sort_Submission_Line__c</fullName>
    <description>Không hiển thị layout. Dùng để sắp xếp các line trên BCC
Quy tắc sắp xếp sẽ là OpportunityId + biến count từng năm trong chức năng tạo Báo Cáo Chốt
Biến ẩn để quy định khi tạo báo cáo chốt dùng để khi hiển thị BCC Line trong BCC thì hiển thị sẽ sắp xếp các BCC Line có cùng OppId chung lại với nhau và các năms sắp xếp theo thứ tự tăng dần</description>
    <label>Sort Submission Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>