project/force-app/main/default/objects/Submission_Report_Line__c/fields/Submission_Report_Number__c.field-meta.xml
<CustomField>
    <fullName>Submission_Report_Number__c</fullName>
    <label>Submission Report Number</label>
    <referenceTo>Submission_Report__c</referenceTo>
    <relationshipLabel>Submission_Report_Number_Submission_Repo</relationshipLabel>
    <relationshipName>Submission_Report_Number_Submission_Repo</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>