project/force-app/main/default/objects/Submission_Report_Line__c/fields/Support_Voucher_Amount_Month_VND_Mont__c.field-meta.xml
<CustomField>
    <fullName>Support_Voucher_Amount_Month_VND_Mont__c</fullName>
    <description>Lấy thông tin bên RO</description>
    <formula>0</formula>
    <label>Support Voucher Amount (VND/Month)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>