project/force-app/main/default/objects/Submission_Report_Line__c/fields/Total_Air_Conditioning_Fee_USD_Month__c.field-meta.xml
<CustomField>
    <fullName>Total_Air_Conditioning_Fee_USD_Month__c</fullName>
    <description>Chỉ hiển thị trong trường hợp Opportunity là Thuê Mới - Gian Hàng và có Đơn Giá Phí Điều Hoà</description>
    <formula>0</formula>
    <label>Total Air Conditioning Fee (USD/Month)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>