project/force-app/main/default/objects/Submission_Report_Line__c/fields/Total_Line_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Line_Amount__c</fullName>
    <description>- Công thức sẽ bằng Tổng của các giá sau đây và * Thời Hạn Giá
- Các Giá Tiền bao gồm: 
+ Tổng Giá Tiền Thuê (VNĐ/Tháng)
+ Tổng Giá Thuê Ngoài Trời (VNĐ/Tháng)
+ Tổng Phí Dịch Vụ (VNĐ/Tháng)
Help Text: (VNĐ)</description>
    <formula>(Total_Rent_Price_VND_Month__c + Total_Outdoor_Price_VND_Month__c + Total_Service_Fee_VND_Month__c) * Price_Duration__c - Voucher_Sales__c - Capex_Sales_VND__c</formula>
    <label>Total Line Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>