project/force-app/main/default/objects/Submission_Report_Line__c/fields/Total_Outdoor_Price_VND_Month__c.field-meta.xml
<CustomField>
    <fullName>Total_Outdoor_Price_VND_Month__c</fullName>
    <description>Chỉ hiển thị trong trường hợp Opportunity là Thuê Mới - Shophouse và có Đơn Giá Thuê Ngoài Trời
Công thức bằng tiền USD * Exchange Rate (Trong đó Exchange Rate lấy dữ liệu từ hàm CURRENCYRATE)</description>
    <formula>0</formula>
    <label>Total Outdoor Price (VND/Month)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>