project/force-app/main/default/objects/Submission_Report_Line__c/fields/Total_Rent_Price_USD_Month__c.field-meta.xml
<CustomField>
    <fullName>Total_Rent_Price_USD_Month__c</fullName>
    <description>Dữ liệu sẽ được tự tính theo thông tin của RO tương ứng:
- Opportunity là Thuê Mới - Gian Hàng:
+ luôn sẽ bằng Giá Chốt Tiền Thuê (USD/m2/Tháng) * Diện Tích
- Opportunity là Thuê Mới - Shophouse:
+ Lựa Chọn Thuê là Thuê Nguyên Căn, sẽ bằng Giá Chốt Tiền Thuê (USD/m2/Tháng) * Tổng Diện Tích GFA
+ Lựa Chọn Thuê là Thuê Tầng 1, sẽ bằng Giá Chốt Tiền Thuê (USD/m2/Tháng) * Diện Tích GFA Tầng 1
+ Lựa Chọn Thuê là Thuê Tầng 1 + 2, sẽ bằng Giá Chốt Tiền Thuê (USD/m2/Tháng) * Diện Tích GFA Tầng 1 + Tầng 2</description>
    <formula>0</formula>
    <label>Total Rent Price (USD/Month)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>