project/force-app/main/default/objects/Submission_Report_Line__c/fields/Total_Rent_Price_VND_Month__c.field-meta.xml
<CustomField>
    <fullName>Total_Rent_Price_VND_Month__c</fullName>
    <description>Công thức bằng tiền USD * Exchange Rate (Trong đó Exchange Rate lấy dữ liệu từ hàm CURRENCYRATE)</description>
    <formula>0</formula>
    <label>Total Rent Price (VND/Month)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>