project/force-app/main/default/objects/Submission_Report_Line__c/fields/Total_Sales_Rent_VND_Month_By_Char__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_Rent_VND_Month_By_Char__c</fullName>
    <description>Field cho OTL
Sales nhập</description>
    <label>Total Rent Price (VND/Month) (By Char)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>