project/force-app/main/default/objects/Submission_Report_Line__c/fields/Total_Service_Fee_USD_Month__c.field-meta.xml
<CustomField>
    <fullName>Total_Service_Fee_USD_Month__c</fullName>
    <description>Hiển thị trong trường hợp Opportunity là Thuê mới - Shophouse, Thuê mới - Gian Hàng và sẽ tính theo trường hợp tương ứng
- Opportunity loại Thuê Mới - Gian Hàng,
+ Luôn bằng Đơn Giá Phí Dịch Vụ * Diện Tích
- Opportunity loại Thuê Mới - Shophouse.
+ Với trường hợp không có Đơn Giá Thuê Ngoài Trời, Phí Dịch Vụ chỉ nhân với Diện Tích Sử Dụng Đất
+ Với trường hợp có Đơn Giá Thuê Ngoài Trời, Phí Dịch Vụ nhân với (Diện Tích Sử Dụng Đất + Diện Tích Ngoài Trời)</description>
    <formula>0</formula>
    <label>Total Service Fee (USD/Month)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>