project/force-app/main/default/objects/Submission_Report_Line__c/fields/Total_Service_Fee_VND_Month__c.field-meta.xml
<CustomField>
    <fullName>Total_Service_Fee_VND_Month__c</fullName>
    <description>Hiển thị trong trường hợp Opportunity là Thuê mới - Shophouse, Thuê mới - Gian Hàng và sẽ tính theo trường hợp tương ứng
Công thức bằng tiền USD * Exchange Rate (Trong đó Exchange Rate lấy dữ liệu từ hàm CURRENCYRATE</description>
    <formula>0</formula>
    <label>Total Service Fee (VND/Month)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>