project/force-app/main/default/objects/Submission_Report_Line__c/fields/Voucher_Budget__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Budget__c</fullName>
    <description>Lấy thông tin bên RO</description>
    <formula>0</formula>
    <label>Voucher Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>