project/force-app/main/default/objects/Submission_Report_Line__c/fields/Voucher_Sales__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Sales__c</fullName>
    <description>= Số Tháng Hỗ Trợ Thực Tế * Tiền Voucher Hỗ Trợ/Tháng Thực Tế (VNĐ/Tháng)</description>
    <formula>0</formula>
    <label>Voucher Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>